lab1/Test/L1-A-3-85.output
Error Type A at Line 1
Error Type B at Line 4
Error Type B at Line 7
Error Type B at Line 13
Error Type B at Line 13
Error Type B at Line 14
