lab1/Test/L1-A-3-85.cmm
float `Hf 
;
float W ( int _zQvZ6 [ 794601305 ] , struct QyKU8IhaK3fUPfW4rl 
  float DcqmCX3ADGdyVd [ 1862872522 ] , float bfEONa 
  , int gEmAHSaTPQ5o9CS ) {
}
float NpMuHDu19Ym9 , WHtKdGL [ 941807417 ] 1029188259.1571828413 
  , nEhdOOu3avIFuaVzW3I [ 1091090105 ] [ 1903108912 
  ] 


;
|| int || ;
!= 